[package]
name = "atomic-destroy"
description = "An value which can be atomically read and destroyed; like an atomic Option."
version = "0.1.0"
authors = ["Kestrer <kestrer.dev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Kestrer/atomic-destroy"
keywords = ["atomic", "option"]
categories = ["data-structures", "concurrency", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
